--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
+    "recharts": "^3.0.2",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.5",
     "yup": "^1.6.1"
